--- a/mini-project-api/Gemfile
+++ b/mini-project-api/Gemfile
@@ -29,6 +29,8 @@ gem 'redd'
 gem 'metainspector'
 gem 'nokogiri'
 
+gem 'active_model_serializers'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
